# pytemon

./: .gitignore  COVERAGE.md  DUNGEONS.md  Future.md  LICENSE  NEXT_STEPS.md  PokemonLibraryTest.py  README.md  pyproject.toml  run_terminal.py  run_web_local.py
.github/: copilot-instructions.md
.github/agents/: battle-system.agent.md  ci-quality.agent.md  feature-orchestrator.agent.md  game-content.agent.md  game-logic.agent.md  test-writer.agent.md  tui-specialist.agent.md
.github/skills/animation-creator/: SKILL.md
.github/skills/battle-ai-trainer/: SKILL.md
.github/skills/battle-balancer/: SKILL.md
.github/skills/battle-flow-designer/: SKILL.md
.github/skills/ci-debugger/: SKILL.md
.github/skills/code-style-enforcer/: SKILL.md
.github/skills/content-validator/: SKILL.md
.github/skills/coverage-reporter/: SKILL.md
.github/skills/cross-module-integrator/: SKILL.md
.github/skills/css-styler/: SKILL.md
.github/skills/dependency-checker/: SKILL.md
.github/skills/dialogue-writer/: SKILL.md
.github/skills/event-trigger-debugger/: SKILL.md
.github/skills/feature-planner/: SKILL.md
.github/skills/game-balance-analyzer/: SKILL.md
.github/skills/lint-fixer/: SKILL.md
.github/skills/location-builder/: SKILL.md
.github/skills/mock-data-creator/: SKILL.md
.github/skills/move-logic-debugger/: SKILL.md
.github/workflows/: ci.yml
atests/: badges.robot  battle_mechanics.robot  e2e_tests.robot  items.robot  move_learn.robot  navigation.robot  pokedex.robot  pokemon_phases.robot  save_load.robot  settings.robot
atests/resources/: common.resource
examples/: README.md  basic_launch.py  battle_simulation.py  programmatic_game.py
pytemon/: __init__.py  buildings.py  cheat_commands.py  dungeon.py  evolution.py  exploration.py  fishing.py  game_state.py  gym_system.py  hm_tm_system.py  items.py  locations.py  models.py  pc_system.py  pokedex.py  stats.py  terminal.py  terminal.tcss
pytemon/battle/: battle_actions.py  battle_ui.py
pytemon/data/: __init__.py  move_data.py  pokemon_data.py  trainer_data.py  type_chart.py
pytemon/engine/: __init__.py  battle_engine.py
pytemon/texts/: __init__.py
pytemon/texts/en/: __init__.py  (+17 more)
pytemon/ui/: battle_mixin.py  building_mixin.py  displays.py  formatters.py  game_flow_mixin.py  menus.py  panel_mixin.py  text_animation.py
tests/: __init__.py  conftest.py  test_pokemon_data.py
tests/battle/: test_battle_actions_basic.py  test_battle_actions_coverage.py  test_battle_actions_extra.py  test_battle_engine.py  test_battle_engine_extra.py  test_battle_engine_phase1.py  test_battle_mixin.py  test_battle_ui.py
tests/data/: test_models.py  test_move_and_trainer_data.py  test_phase1_pokemon_data.py  test_stats.py  test_type_chart.py
tests/game/: test_advanced_systems.py  test_buildings.py  test_buildings_coverage.py  test_champions_garden.py  test_cheat_commands.py  test_coverage_extra.py  test_dungeon.py  test_evolution.py  test_evolution_extra.py  test_exploration.py  test_exploration_coverage.py  test_game_state.py  test_game_state_extra.py  test_gym_system.py  test_gym_system_extra.py  test_items.py  test_locations.py  test_new_cheat_commands.py  test_pc_system.py  test_pewter_cerulean_route.py  test_phase4_saffron_cinnabar.py  test_phase5_elite_four.py  test_phase6_legendaries.py  test_pokedex.py  test_rival_cerulean.py  test_sell_items.py
tests/ui/: test_building_mixin.py  test_choose_lead.py  test_displays_and_extras.py  test_displays_extra2.py  test_formatters.py  test_game_flow_mixin.py  test_menus_extra.py  test_panel_mixin.py  test_pokedex_and_menus.py  test_terminal_subtitle.py
(+10 files in other folders)
