[tool.poetry]
name = "pytemon"
version = "1.0.0"
description = "Unofficial fan project: interactive Pokémon-inspired game library for the terminal, built with Textual TUI"
authors = ["Mark Moberts <markmoberts@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MobyNL/pytemon"
repository = "https://github.com/MobyNL/pytemon"
keywords = ["pokemon", "game", "tui", "terminal", "textual", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Terminals",
]
packages = [{include = "pytemon"}]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.73.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0"
ruff = "^0.4"
mypy = "^1.10"
pytest-asyncio = ">=0.23,<1.0"
robotframework = "^7.0"
robotframework-pythonlibcore = "^4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["pytemon", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default arguments
    "RUF012", # mutable class attributes (common in game code)
    "UP006",  # use `list` instead of `List` — kept for Python 3.8 compat
    "UP007",  # use `X | Y` for union type — kept for Python 3.8 compat
    "UP035",  # import from `typing` — kept for Python 3.8 compat
]

[tool.ruff.lint.isort]
known-first-party = ["pytemon"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["pytemon"]
omit = [
    "pytemon/terminal.py",
    "pytemon/ui/text_animation.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]
